# lm-testbed

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
notebooks/: apA_pytorch.ipynb  ch2_tokenizer.ipynb  ch3_attention.ipynb  ch4_gpt_model.ipynb  ch5-5_loading_pretrained_weights.ipynb  ch5-exercise_5-4.ipynb  ch5_pretraining.ipynb  ch6_finetuning_classification.ipynb
scripts/: check_gpu.py
src/configs/: GPT2.py
src/dataloaders/: Classification.py  GPT.py
src/datautils/: dataloaders.py
src/layers/: activations.py  attention.py  feedforward.py  normalization.py  simple_tokenizers.py
src/loss/: cross_entropy.py
src/models/: GPT2.py  GPT2_dummy.py
src/parameter_loading/: GPT2.py
src/training/: trainer.py
src/utils/: configurations.py  generate.py  parameter_loading.py  token_converter.py
